tests/data-clumps/test-cases/parameter-parameter/simple-less-variables/positive/java/source/AppointmentScheduler.java
public class AppointmentScheduler {
    public void schedule(int patientId, int doctorId) {
        System.out.println("Scheduling appointment for patient " + patientId + " with doctor " + doctorId);
    }
}
