tests/data-clumps/test-cases/parameter-parameter/simple-less-variables/negative/java/source/BillingProcessor.java
public class BillingProcessor {
    public void createInvoice(int patientId, int doctorId) {
        System.out.println("Creating invoice for patient " + patientId + " and doctor " + doctorId);
    }
}
